<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bebosemsemcom.ibrahimbebo.tshtebat.WorkerActivity">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:padding="5dp"
            android:text="@string/info"
            android:gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/bname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/wname"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColor="@color/Black"
                android:textSize="16sp"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/bphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/wphone"
                android:inputType="phone"

                android:paddingBottom="20dp"
                android:textColor="@color/Black"
                android:textSize="16sp"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/bdes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:paddingBottom="20dp"
                android:textColor="@color/Black"
                android:textSize="16sp"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshow"
            android:layout_margin="20dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/White"
            android:layout_marginLeft="10dp"
            />`
    </LinearLayout>





</ScrollView>
